controller command add get, correct entity bug

--- a/microservices/src/main/resources/application.properties
+++ b/microservices/src/main/resources/application.properties
@@ -10,13 +10,5 @@ spring.jpa.generate-ddl=true
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 # Naming strategy
-spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
-spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
-
-
-##used to indicate the Kafka Cluster address
-spring.kafka.producer.bootstrap-servers=localhost:9092
-##used to indicate the consumer-group-id
-spring.kafka.consumer.group-id=consumer
-##used to define a Kafka topic name to produce and receive messages
-spring.kafka.consumer.topic.user=USER
+#spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
+#spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
