--- a/microservices/src/main/resources/application.properties
+++ b/microservices/src/main/resources/application.properties
@@ -12,11 +12,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 #RabbitMQ
-spring.rabbitmq.host=micro-services-rabbitmq
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=user
-spring.rabbitmq.password=user
+spring.rabbitmq.host=http://micro-ci.westus2.cloudapp.azure.com
+spring.rabbitmq.port=40700
+spring.rabbitmq.username=esgi-al1
+spring.rabbitmq.password=g5Y86ck*uQ2&s57
 #set queue, exchange and routing key names
-rabbitmq.queue=commands-queue
-rabbitmq.exchange=commands-exchange
-rabbitmq.routingKey=commands-routingKey
+rabbitmq.queue=al1-commands-queue
+rabbitmq.exchange=al1-commands-exchange
+rabbitmq.routingKey=al1-commands-routingKey
