add queue in message broker and consumer queue project

--- a/microservices/src/main/resources/application.properties
+++ b/microservices/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8899
-spring.datasource.url=jdbc:postgresql://micro-services-commands-postgres:5432/microservices_db?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC
+spring.datasource.url=jdbc:postgresql://localhost:5432/microservices_db?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root1994
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -20,3 +20,6 @@ spring.rabbitmq.password=g5Y86ck*uQ2&s57
 rabbitmq.queue=al1-commands-queue
 rabbitmq.exchange=al1-commands-exchange
 rabbitmq.routingKey=al1-commands-routingKey
+#rabbitmq.queue=al1-project-queue
+#rabbitmq.exchange=al1-project-exchange
+#rabbitmq.routingKey=al1-project-routingKey
