--- a/microservices/src/main/resources/application.properties
+++ b/microservices/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8899
+spring.application.name=micro-ci-commands
 spring.datasource.url=jdbc:postgresql://localhost:5432/microservices_db?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root1994
@@ -13,14 +14,16 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 #RabbitMQ
 spring.rabbitmq.host=micro-ci.westus2.cloudapp.azure.com
+spring.rabbitmq.port=5672
 spring.rabbitmq.username=esgi-al1
 spring.rabbitmq.password=g5Y86ck*uQ2&s57
-spring.rabbitmq.port=5672
 #set queue, exchange and routing key names
 rabbitmq.queue=al1-commands-queue
 rabbitmq.exchange=al1-commands-exchange
 rabbitmq.routingKey=al1-commands-routingKey
-
-#rabbitmq.queue=al1-project-queue
-#rabbitmq.exchange=al1-project-exchange
-#rabbitmq.routingKey=al1-project-routingKey
+#configuration consul
+spring.cloud.consul.host=micro-ci.westus2.cloudapp.azure.com
+spring.cloud.consul.port=40600
+spring.cloud.consul.discovery.health-check-path=/api/v1/consul
+spring.cloud.consul.discovery.health-check-interval=10s
+spring.cloud.consul.config.acl-token=874cfccc-7fb4-202b-cbdf-6f4c3fd5c5e2
