--- a/microservices/src/main/resources/application.properties
+++ b/microservices/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 #RabbitMQ
-spring.rabbitmq.host=10.0.0.5
-spring.rabbitmq.port=40701
+spring.rabbitmq.addresses=micro-ci.westus2.cloudapp.azure.com:40700
+#spring.rabbitmq.port=40701
 spring.rabbitmq.username=esgi-al1
 spring.rabbitmq.password=g5Y86ck*uQ2&s57
 #set queue, exchange and routing key names
