--- a/microservices/src/main/resources/application.properties
+++ b/microservices/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8899
 spring.application.name=micro-ci-commands
-spring.datasource.url=jdbc:postgresql://0.0.0.0:5432/microservices_db?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC
+spring.datasource.url=jdbc:postgresql://micro-services-commands-postgres:5432/microservices_db?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root1994
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -13,8 +13,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 #RabbitMQ
-spring.rabbitmq.addresses=micro-ci.westus2.cloudapp.azure.com:40700
-#spring.rabbitmq.port=40701
+spring.rabbitmq.host=micro-ci.westus2.cloudapp.azure.com
+spring.rabbitmq.port=40700
 spring.rabbitmq.username=esgi-al1
 spring.rabbitmq.password=g5Y86ck*uQ2&s57
 #set queue, exchange and routing key names
