--- a/microservices/pom.xml
+++ b/microservices/pom.xml
@@ -54,6 +54,11 @@
             <version>2.9.2</version>
         </dependency>
         <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-consul-all</artifactId>
+        <version>2.2.3.RELEASE</version>
+        </dependency>
+        <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
