--- a/microservices/src/main/resources/application.properties
+++ b/microservices/src/main/resources/application.properties
@@ -13,17 +13,26 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 #RabbitMQ
-spring.rabbitmq.addresses=micro-ci.westus2.cloudapp.azure.com
+spring.rabbitmq.host=micro-ci.westus2.cloudapp.azure.com
 spring.rabbitmq.port=40700
 spring.rabbitmq.username=esgi-al1
 spring.rabbitmq.password=g5Y86ck*uQ2&s57
+
 #set queue, exchange and routing key names
 rabbitmq.queue=al1-commands-queue
 rabbitmq.exchange=al1-commands-exchange
 rabbitmq.routingKey=al1-commands-routingKey
-#configuration consul
+
+#configuration consul en local
+#spring.cloud.consul.host=localhost
+#spring.cloud.consul.port=8500
+#spring.cloud.consul.discovery.health-check-path=/api/v1/commands/run
+#spring.cloud.consul.discovery.health-check-interval=10s
+##spring.cloud.consul.config.acl-token=874cfccc-7fb4-202b-cbdf-6f4c3fd5c5e2
+
+#configuration consul en prod
 spring.cloud.consul.host=micro-ci.westus2.cloudapp.azure.com
 spring.cloud.consul.port=40600
-spring.cloud.consul.discovery.health-check-path=/api/v1/consul
+spring.cloud.consul.discovery.health-check-path=/api/v1/commands/run
 spring.cloud.consul.discovery.health-check-interval=10s
 spring.cloud.consul.config.acl-token=874cfccc-7fb4-202b-cbdf-6f4c3fd5c5e2
