--- a/microservices/src/main/resources/application.properties
+++ b/microservices/src/main/resources/application.properties
@@ -12,7 +12,14 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Naming strategy
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
-#RabbitMQ
+
+##RabbitMQ en local
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=user
+#spring.rabbitmq.password=user
+
+#RabbitMQ en prod
 spring.rabbitmq.host=micro-ci.westus2.cloudapp.azure.com
 spring.rabbitmq.port=40700
 spring.rabbitmq.username=esgi-al1
@@ -23,12 +30,12 @@ rabbitmq.queue=al1-commands-queue
 rabbitmq.exchange=al1-commands-exchange
 rabbitmq.routingKey=al1-commands-routingKey
 
+
 #configuration consul en local
 #spring.cloud.consul.host=localhost
 #spring.cloud.consul.port=8500
 #spring.cloud.consul.discovery.health-check-path=/api/v1/commands/run
 #spring.cloud.consul.discovery.health-check-interval=10s
-##spring.cloud.consul.config.acl-token=874cfccc-7fb4-202b-cbdf-6f4c3fd5c5e2
 
 #configuration consul en prod
 spring.cloud.consul.host=micro-ci.westus2.cloudapp.azure.com
