--- a/.github/azure/docker-compose.yml
+++ b/.github/azure/docker-compose.yml
@@ -1,14 +1,14 @@
 version: '3'
 services:
   api_commands:
-    image: maven:3.6.3-jdk-11
+    image: esgimicroci/al1-commands:latest
     container_name: micro-services-commands-api
     working_dir: /api
     volumes:
       - ./microservices:/api
-    command: >
-      sh -c "mvn package &&
-             java -jar /api/target/*.jar"
+#    command: >
+#      sh -c "mvn package &&
+#             java -jar /api/target/*.jar"
     environment:
       - POSTGRES_DB=microservices_db
       - POSTGRES_USER=root
