--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,14 +34,14 @@ services:
 
     #      API Back-end Spring Boot Application
   api_commands:
-    image:
+    build: .
     container_name: micro-services-commands-api
     working_dir: /api
     volumes:
       - ./microservices:/api
-    command: >
-      sh -c "mvn package &&
-
+#    command: >
+#      sh -c "mvn package &&
+#             java -jar /api/target/*.jar"
     environment:
       - POSTGRES_DB=microservices_db
       - POSTGRES_USER=root
