add api in prod

--- a/microservices/src/main/resources/application.properties
+++ b/microservices/src/main/resources/application.properties
@@ -1,8 +1,10 @@
+spring.jpa.database=postgresql
 server.port=8899
 spring.application.name=micro-ci-commands
 spring.datasource.url=jdbc:postgresql://postgresdb:5432/microservices_db?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root1994
+spring.datasource.platform=postgresql
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
