add api in prod

--- a/microservices/src/main/resources/application.properties
+++ b/microservices/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.database=postgresql
 server.port=8899
 spring.application.name=micro-ci-commands
-spring.datasource.url=jdbc:postgresql://postgresdb:5432/microservices_db?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC
+spring.datasource.url=jdbc:postgresql://localhost:5432/microservices_db?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root1994
 spring.datasource.platform=postgresql
