--- a/microservices/src/main/resources/application.properties
+++ b/microservices/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 ##RabbitMQ en local
-#spring.rabbitmq.host=rabbitmq
+#spring.rabbitmq.host=localhost
 #spring.rabbitmq.port=5672
 #spring.rabbitmq.username=user
 #spring.rabbitmq.password=user
@@ -30,7 +30,7 @@ rabbitmq.exchange=al1-commands-exchange
 rabbitmq.routingKey=al1-commands-routingKey
 
 #configuration consul en local
-#spring.cloud.consul.host=localhost
+#spring.cloud.consul.host=consul
 #spring.cloud.consul.port=8500
 #spring.cloud.consul.discovery.health-check-path=/api/v1/commands/run
 #spring.cloud.consul.discovery.health-check-interval=10s
