--- a/.github/azure/docker-compose.yml
+++ b/.github/azure/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   postgresdb:
-    image: esgimicroci/al1-commands
+    image: postgres
     environment:
       - POSTGRES_DB=microservicesdb
       - POSTGRES_USER=root
@@ -21,8 +21,6 @@ services:
       - POSTGRES_DB=microservicesdb
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=root1994
-    depends_on:
-      - postgresdb
     restart: always
 
 volumes:
