--- a/microservices/src/main/resources/application.properties
+++ b/microservices/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 ##RabbitMQ en local
-#spring.rabbitmq.host=localhost
+#spring.rabbitmq.host=rabbitmq
 #spring.rabbitmq.port=5672
 #spring.rabbitmq.username=user
 #spring.rabbitmq.password=user
@@ -36,8 +36,8 @@ rabbitmq.routingKey=al1-commands-routingKey
 #spring.cloud.consul.discovery.health-check-interval=10s
 
 #configuration consul en prod
-#spring.cloud.consul.host=micro-ci.westus2.cloudapp.azure.com
-#spring.cloud.consul.port=40600
-#spring.cloud.consul.discovery.health-check-path=/api/v1/commands/run
-#spring.cloud.consul.discovery.health-check-interval=10s
-#spring.cloud.consul.config.acl-token=874cfccc-7fb4-202b-cbdf-6f4c3fd5c5e2
+spring.cloud.consul.host=micro-ci.westus2.cloudapp.azure.com
+spring.cloud.consul.port=40600
+spring.cloud.consul.discovery.health-check-path=/api/v1/commands/run
+spring.cloud.consul.discovery.health-check-interval=10s
+spring.cloud.consul.config.acl-token=874cfccc-7fb4-202b-cbdf-6f4c3fd5c5e2
