--- a/.github/azure/docker-compose.yml
+++ b/.github/azure/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   postgresdb:
     container_name: micro-services-postgres
-    image: esgimicroci/al1-commands
+    image: esgimicroci/al1-commands:latest
     environment:
       - POSTGRES_DB=microservicesdb
       - POSTGRES_USER=root
@@ -14,7 +14,7 @@ services:
 
   api_commands:
     container_name: micro-services-commands-api
-    image: esgimicroci/al1-commands
+    image: esgimicroci/al1-commands:latest
     ports:
       - "8899:8899"
     volumes:
