--- a/.github/azure/docker-compose.yml
+++ b/.github/azure/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   postgresdb:
     container_name: micro-services-postgres
-    image: esgimicroci/al1-commands:latest
+    image: postgres
     environment:
       - POSTGRES_DB=microservicesdb
       - POSTGRES_USER=root
