--- a/.github/workflows/micro-ci-commands.yml
+++ b/.github/workflows/micro-ci-commands.yml
@@ -48,4 +48,4 @@ jobs:
         uses: azure/CLI@v1
         with:
           inlineScript: |
-            az vm run-command invoke -g ${{ secrets.AZURE_RESOURCE_GRP }} -n ${{ secrets.AZURE_VM }} --command-id RunShellScript --scripts "cd /home/micro-ci-al1/micro-ci-commands && wget -q https://raw.githubusercontent.com/esgi-microservices-al1/micro-ci-commands/workflow/.github/azure/docker-compose.yml -O docker-compose.yml && docker-compose stop && docker-compose pull docker-compose rm && docker-compose up -d"
+            az vm run-command invoke -g ${{ secrets.AZURE_RESOURCE_GRP }} -n ${{ secrets.AZURE_VM }} --command-id RunShellScript --scripts "cd /home/micro-ci-al1/micro-ci-commands && wget -q https://raw.githubusercontent.com/esgi-microservices-al1/micro-ci-commands/workflow/.github/azure/docker-compose.yml -O docker-compose.yml && docker-compose dwon && docker-compose stop && docker-compose pull docker-compose rm -f && docker-compose up -d"
