--- a/.github/azure/docker-compose.yml
+++ b/.github/azure/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3'
 services:
   postgresdb:
+    image: postgres:9.6-alpine
     container_name: micro-services-postgres
-    image: esgimicroci/al1-commands:latest
     environment:
       - POSTGRES_DB=microservicesdb
       - POSTGRES_USER=root
@@ -13,12 +13,14 @@ services:
       - "5432:5432"
 
   api_commands:
-    container_name: micro-services-commands-api
     image: esgimicroci/al1-commands:latest
+    container_name: micro-services-commands-api
     ports:
       - "8899:8899"
     volumes:
       - ./microservices:/api
+    depends_on:
+      - postgresdb
     environment:
       - POSTGRES_DB=microservicesdb
       - POSTGRES_USER=root
