add api in prod

--- a/.github/azure/docker-compose.yml
+++ b/.github/azure/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3'
 services:
   postgresdb:
-    image: esgimicroci/al1-commands:latest
-    container_name: micro-services-postgres
+    image: esgimicroci/al1-commands
+    container_name: micro-services-commands-postgres
     environment:
       - POSTGRES_DB=microservicesdb
       - POSTGRES_USER=root
@@ -13,7 +13,7 @@ services:
       - "5432:5432"
 
   api_commands:
-    image: esgimicroci/al1-commands:latest
+    image: esgimicroci/al1-commands
     container_name: micro-services-commands-api
     ports:
       - "8899:8899"
