--- a/.github/azure/docker-compose.yml
+++ b/.github/azure/docker-compose.yml
@@ -13,12 +13,12 @@ services:
       - "5432:5432"
 
   api_commands:
-    image: esgimicroci/al1-commands
+    image: esgimicroci/al1-commands:latest
     container_name: micro-services-commands-api
     ports:
       - "8899:8899"
     volumes:
-      - al1projects:/var/projects
+      - al1projects:/api
     depends_on:
       - postgresdb
     environment:
