add api in prod

--- a/.github/azure/docker-compose.yml
+++ b/.github/azure/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     ports:
       - "5432:5432"
 
-  api_commands:
+  apicommands:
     image: esgimicroci/al1-commands:latest
     container_name: micro-services-commands-api
     ports:
