--- a/.github/azure/docker-compose.yml
+++ b/.github/azure/docker-compose.yml
@@ -17,7 +17,8 @@ services:
     ports:
       - "8899:8899"
     volumes:
-     - commands-data:/var/api
+     - commands-data:/api
+     - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
       - postgresdb
     environment:
