--- a/.github/azure/docker-compose.yml
+++ b/.github/azure/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     ports:
       - "5432:5432"
   apicommands:
-    image: esgimicroci/al1-commands
+    image: esgimicroci/al1-commands:latest
     container_name: micro-services-commands-api
     ports:
       - "8899:8899"
