--- a/microservices/src/main/resources/application.properties
+++ b/microservices/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8899
 spring.application.name=micro-ci-commands
-spring.datasource.url=jdbc:postgresql://postgresdb:5432/microservicesdb?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC
+spring.datasource.url=jdbc:postgresql://micro-services-commands-postgres:5432/microservicesdb?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root1994
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -13,27 +13,27 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 #RabbitMQ en local
-spring.rabbitmq.host=rabbitmq
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=user
-spring.rabbitmq.password=user
+#spring.rabbitmq.host=rabbitmq
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=user
+#spring.rabbitmq.password=user
 #RabbitMQ en prod
-#spring.rabbitmq.host=10.0.0.5
-#spring.rabbitmq.port=40701
-#spring.rabbitmq.username=esgi-al1
-#spring.rabbitmq.password=g5Y86ck*uQ2&s57
+spring.rabbitmq.host=10.0.0.5
+spring.rabbitmq.port=40701
+spring.rabbitmq.username=esgi-al1
+spring.rabbitmq.password=g5Y86ck*uQ2&s57
 #set queue, exchange and routing key names
 rabbitmq.queue=al1-commands-queue
 rabbitmq.exchange=al1-commands-exchange
 rabbitmq.routingKey=al1-commands-routingKey
 #configuration consul en local
-spring.cloud.consul.host=consul
-spring.cloud.consul.port=8500
-spring.cloud.consul.discovery.health-check-path=/api/v1/commands/run
-spring.cloud.consul.discovery.health-check-interval=10s
-#configuration consul en prod
-#spring.cloud.consul.host=micro-ci.westus2.cloudapp.azure.com
-#spring.cloud.consul.port=40600
+#spring.cloud.consul.host=consul
+#spring.cloud.consul.port=8500
 #spring.cloud.consul.discovery.health-check-path=/api/v1/commands/run
 #spring.cloud.consul.discovery.health-check-interval=10s
-#spring.cloud.consul.config.acl-token=874cfccc-7fb4-202b-cbdf-6f4c3fd5c5e2
+#configuration consul en prod
+spring.cloud.consul.host=micro-ci.westus2.cloudapp.azure.com
+spring.cloud.consul.port=40600
+spring.cloud.consul.discovery.health-check-path=/api/v1/commands/run
+spring.cloud.consul.discovery.health-check-interval=10s
+spring.cloud.consul.config.acl-token=874cfccc-7fb4-202b-cbdf-6f4c3fd5c5e2
