add consul in prod

--- a/.github/azure/docker-compose.yml
+++ b/.github/azure/docker-compose.yml
@@ -13,8 +13,6 @@ services:
       - POSTGRES_PASSWORD=root1994
     networks:
       - micro-commands-net
-    depends_on:
-      - spring-cloud-gateway
     volumes:
       - postgres:/data/postgres/project
     ports:
@@ -24,25 +22,18 @@ services:
     container_name: micro-services-commands-api
     ports:
       - "8899:8899"
+    expose:
+      - 8899
     volumes:
       - commands-data:/api
     networks:
       - micro-commands-net
-    depends_on:
-      - spring-cloud-gateway
     environment:
       - POSTGRES_DB=microservicesdb
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=root1994
     restart: always
 
-  spring-cloud-gateway:
-    build: ./gateway-test
-    container_name: gateway-commands
-    ports:
-      - 6000:8081
-    networks:
-      - micro-commands-net
 
 volumes:
   postgres:
