--- a/microservices/src/main/resources/application.properties
+++ b/microservices/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-server.port=8899
-spring.application.name=micro-ci-commands
 spring.datasource.url=jdbc:postgresql://postgresdb:5432/microservicesdb?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root1994
@@ -32,8 +30,8 @@ rabbitmq.routingKey=al1-commands-routingKey
 #spring.cloud.consul.discovery.health-check-path=/api/v1/commands/run
 #spring.cloud.consul.discovery.health-check-interval=10s
 #configuration consul en prod
-spring.cloud.consul.host=micro-ci.westus2.cloudapp.azure.com
-spring.cloud.consul.port=40600
-spring.cloud.consul.discovery.health-check-path=/api/v1/commands/run
-spring.cloud.consul.discovery.health-check-interval=10s
-spring.cloud.consul.config.acl-token=874cfccc-7fb4-202b-cbdf-6f4c3fd5c5e2
+#spring.cloud.consul.host=micro-ci.westus2.cloudapp.azure.com
+#spring.cloud.consul.port=40600
+#spring.cloud.consul.discovery.health-check-path=/api/v1/commands/run
+#spring.cloud.consul.discovery.health-check-interval=10s
+#spring.cloud.consul.config.acl-token=874cfccc-7fb4-202b-cbdf-6f4c3fd5c5e2
