--- a/microservices/src/main/resources/application.yml
+++ b/microservices/src/main/resources/application.yml
@@ -1,16 +1,16 @@
-cloud:
-  gateway:
-    discovery:
-      locator:
-        enabled: true
-  consul:
-    discovery:
-      register: false
-    host: micro-ci.westus2.cloudapp.azure.com
-    port: 40600
-  loadbalancer:
-    ribbon:
-      enabled: false
-
-server:
-  port: 8888
+spring:
+  application:
+    name: micro-ci-commands
+  cloud:
+    consul:
+      host: 10.0.0.5
+      port: 40601
+      discovery:
+        tags: traefik.enable=true, traefik.frontend.entryPoints=http, traefik.frontend.rule=PathPrefixStrip:/api/v1/
+        health-check-interval: 10s
+        health-check-url: http://10.0.0.4:8888/api/v1/consul
+        acl-token: 874cfccc-7fb4-202b-cbdf-6f4c3fd5c5e2
+        service-name: micro-ci-commands
+        hostname: micro-ci-al1.internal.cloudapp.net
+        ip-address: 10.0.0.4
+        port: 8899
