config API-Gateway

--- a/.github/azure/docker-compose.yml
+++ b/.github/azure/docker-compose.yml
@@ -25,6 +25,7 @@ services:
     expose:
       - 8899
     volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
       - commands-data:/api
     networks:
       - micro-commands-net
