--- a/microservices/src/main/resources/bootstrap.yml
+++ b/microservices/src/main/resources/bootstrap.yml
@@ -6,11 +6,11 @@ spring:
       host: micro-ci.westus2.cloudapp.azure.com
       port: 40600
       discovery:
-        tags: traefik.enable=true, traefik.frontend.entryPoints=http, traefik.frontend.rule=PathPrefixStrip:/api/v1/
+        tags: traefik.enable=true, traefik.frontend.entryPoints=http, traefik.frontend.rule=PathPrefixStrip:/al1.commands-ci/
         health-check-interval: 10s
         health-check-url: http://10.0.0.4:8899/api/v1/consul
         acl-token: 874cfccc-7fb4-202b-cbdf-6f4c3fd5c5e2
-        service-name: micro-ci-commands
+        service-name: al1-commands
         hostname: micro-ci-al1.internal.cloudapp.net
         ip-address: 10.0.0.4
         port: 8899
