--- a/microservices/src/main/resources/bootstrap.yml
+++ b/microservices/src/main/resources/bootstrap.yml
@@ -8,7 +8,7 @@ spring:
       discovery:
         tags: traefik.enable=true, traefik.frontend.entryPoints=http, traefik.frontend.rule=PathPrefixStrip:/al1.commands-ci/
         health-check-interval: 10s
-        health-check-url: http://10.0.0.4:8899/api/v1/consul
+        health-check-url: http://10.0.0.4:8899/api/v1/check
         acl-token: 874cfccc-7fb4-202b-cbdf-6f4c3fd5c5e2
         service-name: al1-commands
         hostname: micro-ci-al1.internal.cloudapp.net
