--- a/microservices/src/main/resources/bootstrap.yml
+++ b/microservices/src/main/resources/bootstrap.yml
@@ -13,7 +13,7 @@ spring:
         health-check-url: http://10.0.0.4:8899/api/v1/check
         acl-token: 874cfccc-7fb4-202b-cbdf-6f4c3fd5c5e2
         register: true
-        instance-id:  ${spring.application.name}-01
+        instance-id:  ${spring.application.name}
         service-name: al1-commands
         hostname: micro-ci-al1.internal.cloudapp.net
         port: 8899
