--- a/microservices/src/main/resources/application.properties
+++ b/microservices/src/main/resources/application.properties
@@ -1,10 +1,11 @@
+server.port=8899
 spring.application.name=micro-ci-commands
 spring.datasource.url=jdbc:postgresql://postgresdb:5432/microservicesdb?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root1994
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -12,10 +13,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 #RabbitMQ en local
-#spring.rabbitmq.host=127.0.0.1
+#spring.rabbitmq.host=localhost
 #spring.rabbitmq.port=5672
 #spring.rabbitmq.username=user
 #spring.rabbitmq.password=user
+
 #RabbitMQ en prod
 spring.rabbitmq.host=10.0.0.5
 spring.rabbitmq.port=40701
@@ -25,14 +27,16 @@ spring.rabbitmq.password=g5Y86ck*uQ2&s57
 rabbitmq.queue=al1-commands-queue
 rabbitmq.exchange=al1-commands-exchange
 rabbitmq.routingKey=al1-commands-routingKey
+
 #configuration consul en local
-#spring.cloud.consul.host=consul
+#spring.cloud.consul.host=localhost
 #spring.cloud.consul.port=8500
-#spring.cloud.consul.discovery.health-check-path=/api/v1/commands/run
+#spring.cloud.consul.discovery.health-check-url=http://10.190.58.35:8899/api/v1/check
 #spring.cloud.consul.discovery.health-check-interval=10s
-#configuration consul en prod
-#spring.cloud.consul.host=micro-ci.westus2.cloudapp.azure.com
-#spring.cloud.consul.port=40600
-#spring.cloud.consul.discovery.health-check-path=/api/v1/commands/run
-#spring.cloud.consul.discovery.health-check-interval=10s
-#spring.cloud.consul.config.acl-token=874cfccc-7fb4-202b-cbdf-6f4c3fd5c5e2
+#spring.cloud.consul.discovery.register=true
+#spring.cloud.consul.discovery.instance-id=${spring.application.name}
+#spring.cloud.consul.discovery.service-name=al1-commands
+#spring.cloud.consul.discovery.prefer-ip-address=true
+#spring.cloud.consul.discovery.ip-address=10.190.58.35
+#spring.cloud.consul.discovery.port=8899
+
