--- a/.github/azure/docker-compose.yml
+++ b/.github/azure/docker-compose.yml
@@ -3,10 +3,8 @@ version: '3'
 services:
   postgresdb:
     image: postgres
-    environment:
-      - POSTGRES_DB=microservicesdb
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=root1994
+    env_file:
+      - keys.env
     volumes:
       - postgres:/data/postgres/project
     ports:
@@ -22,13 +20,8 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - commands-data:/api
-    environment:
-      - POSTGRES_DB=microservicesdb
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=root1994
-      - CONSUL_HOST=micro-ci.westus2.cloudapp.azure.com
-      - CONSUL_TOKEN=874cfccc-7fb4-202b-cbdf-6f4c3fd5c5e2
-      - CONSUL_PORT=40600
+    env_file:
+      - keys.env
     restart: always
 
 volumes:
