hide API URL and Passwords

--- a/microservices/src/main/resources/application.properties
+++ b/microservices/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8899
+server.port=${API_PORT}
 spring.application.name=micro-ci-commands
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${POSTGRES_USER}
